<?xml version="1.0"?>
<package>
  <name>bringup</name>
  <version>0.1.6</version>
  <description>
    roslaunch scripts for starting the model
  </description>
  <license>Apache License 2.0</license>
  <author email="seungchul0406@gmail.com">Ha</author>
  <maintainer email="seungchul0406@gmail.com">Ha</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>description</run_depend>
  <run_depend>teleop</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>hls_lfcd_lds_driver</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export></export>
</package>
